# ih_sales

./: .gitignore  README.md  pyproject.toml
config/: client_a_bronze_resgistry.json  client_b_schema_registry.json  client_c_schema_registry.json  dir_config.yaml
src/bronze/: ingest_to_bronze.py
src/common/: bronze_df_utils.py  config.py  delta_utils.py  gold_process_log.py  silver_process_log.py  spark_session.py  tranform.setup_type_0_dims.py
src/gold/: transform.build_gold.py
src/schema/: silver_dim_customer.py  silver_fact_transactions.py  silver_schema.py
src/silver/: transform_dim.py
src/silver/client_a/: transform.dim.py  transform.fact.py
src/silver/client_b/: transform.dim.py  transform.fact.py
src/silver/client_c/: transform.fact.py  transform_dim.py
src/sql/gold/: gold_customer_summary.sql  gold_sales_summary.sql
