[tool.poetry]
name = "ih_sales"
version = "0.1.0"
description = "Databricks transform project"
authors = ["Mukesh Singh <mukesh.singh@globant.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# Core dependency

# Faker for data generation
faker = "^40.12.0"

# Local shared package (editable for dev)
#common_utils = {path ="../common_utils", develop = true}
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pyspark = "4.1.1"
delta-spark = "4.1.0"
pytest = "^8.0.0"
ruff = "^0.5.0"


[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"